
10-Jan-2011 Jean-Marie Simonet
 $ Adding ca-ES, lo-LA to installation langs
 $ Adding af-ZA to installation langs
 $ Adding Translation Teams in CREDITS
 - Removed nl-BE from install lang packs because of wrong browser detect
 # [#24256] Language switcher broken by #24210. Thanks Sam
 # [#24267] debug plugin does not display results if gzip is on. Thanks Sam

10-Jan-2011 Mark Dexter
# [#24250] PHP Notice In Archived Layout
# Sample data fixes (Elin Waring)
# [#24251] Article Category List Menu Item Missing Order By Parameters
# Sample data fixes: remove xx-XX language and add Joomla! library to joomla.sql
# [#24210] Revert to 1.5 behaviour for plugin language loading

10-Jan-2011 Andrew Eddie
 # Fix typo in Joomla system plugin.
 # Fixed issue [#24226] XSS Vulnerability in module chrome in administrator (Ian MacLennan).
 # Fixed issue [#24237] Database setup screen - radio button does not accomodate longer lang strings (Serge Litvinov, Andrea Tarr).
 # Fixed issue [#24221] JFormFieldRules creates invalid markup (Rouven Weßling, Andrea Tarr).
 # Fixed issue [#24215] Some small improvements to the installation (Rouven Weßling).
 # Fixed issue [#23992] Admin Bluestork template - Alignment of form text fields in IE7 (Ole Bang Ottosen, Bill Richardson).
 # Fixed issue [#24153] More PHP strict fixes (mostly backend) (Rouven Weßling, Mark Dexter).
 # Fixed issue [#24200] Primary keys from request should be cast to integer (Ian MacLennan).
 # Fixed issue [#24202] Primary keys from request should be cast to integer (Ian MacLennan).
 # Fixed issue [#24204] Primary keys from request should be cast to integer (Ian MacLennan).
 # Fixed issue [#24207] Level controller does not cast primary keys from request to int (Ian MacLennan).
 # Fixed issue [#24252] Unescaped value should be filtered (Ian MacLennan).
 # Fixed issue [#24254] Hathor status module jtext plurals (Andrea Tarr).
 # Fixed issue [#24253] Installation IE fixes (Andrea Tarr).

09-Jan-2011 Christophe Demko